[package]
authors = ["Joe Ranweiler <joe@lemma.co>"]
description = "Library for manipulating rectangles of text."
name = "stamp"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ranweiler/stamp"
version = "0.1.0"

[dependencies]
unicode-segmentation = "1.2.0"
unicode-width = "0.1.4"